[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "personal_app"
version = "0.1.0"
description = "personal app"
requires-python = ">=3.11"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.envs.default]
dependencies = [
    "streamlit==1.44.0",
    "plotly==5.18.0",
    "pandas==2.2.1",
    "Pillow==10.2.0",
    "langchain==0.1.12",
    "llama-index==0.9.48",
    "openai==1.5.0",
    "typing-extensions==4.13.0",
    "pydantic==1.10.21",
    "streamlit-chat==0.1.1",
    "streamlit-aggrid==0.3.4",
    "streamlit-timeline==0.0.2",
    "colorlog==6.7.0"
]

[tool.hatch.envs.default.scripts]
install-deps = "pip install -r requirements.txt"
compile = "python -m compileall ."
